--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>application.Main</mainClass>
+            <mainClass>tetris_puf/application.Main</mainClass>
           </manifest>
         </archive>
       </configuration>
@@ -56,7 +56,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-		<mainClass>application.Main</mainClass>
+		<mainClass>tetris_puf/application.Main</mainClass>
         </configuration>
     </plugin>
 <plugin>
@@ -72,13 +72,13 @@
             <configuration>
                 <artifactSet>
                     <excludes>
-                        <exclude>application:Main</exclude>
+			    <exclude>tetris_puf/application:Main</exclude>
                     </excludes>
                 </artifactSet>
                 <transformers>
                     <!-- add Main-Class to manifest file -->
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        <mainClass>application.Main</mainClass>
+                        <mainClass>tetris_puf/application.Main</mainClass>
                     </transformer>
                 </transformers>
             </configuration>
@@ -89,7 +89,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>application.Main</mainClass>
+                    <mainClass>tetris_puf/application.Main</mainClass>
                     <!--arguments>
                         <argument>argument1</argument>
                     </arguments-->
